--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="box-container">
     
         <div class="box">
-            <img src="/image/myproject.png" alt="social">
+            <img src="./image/myproject.png" alt="social">
             <h2 class="title">College Project</h2>
             <p class="description">This is my seventh sem project which is an online Autorickshaw Booking System (OABS).</p>
         </div>
