--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3> <span> qualification : </span> BSC.CSIT </h3>
         <h3> <span> post : </span> JUNIOR DEVELOPER </h3>
         <h3> <span> language : </span> NEPALI/ENGLISH/HINDI </h3>
-        <a href="#"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="./image/Binita Regmi-1.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
