--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h3> <span> name : </span> BINITA REGMI </h3>
         <h3> <span> age : </span> 23 </h3>
         <h3> <span> qualification : </span> BSC.CSIT </h3>
-        <h3> <span> post : </span> Junior Laravel Developer </h3>
+        <h3> <span> post : </span> JUNIOR LARAVEL DEVELOPER </h3>
         <h3> <span> language : </span> NEPALI/ENGLISH/HINDI </h3>
         <a href="./image/Binita regmi-5.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
