--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         <h3> <span> qualification : </span> BSC.CSIT </h3>
         <h3> <span> post : </span> JUNIOR LARAVEL DEVELOPER </h3>
         <h3> <span> language : </span> NEPALI/ENGLISH/HINDI </h3>
+        <div class="display-flex">
+          <div><a href="https://www.linkedin.com/in/beenita-regmi-2a8326234/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div> 
+          <div><a href="https://github.com/Bin1ta" target="_blank"><i class="fa-brands fa-github"></i></i></a></div>
+        </div>
         <a href="./image/Binita regmi-5.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
